[package]
name = "treest"
version = "0.2.2"
edition = "2021"
description = "Visually explore a file tree."
license = "MIT"
repository = "https://github.com/naclsn/treest"
keywords = ["tree", "filesystem", "tui"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dash_conversion = { path = "dash_conversion" }
crossterm = "0.25.0"
dirs = "4.0.0"
glob = "0.3.1"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
signal-hook = "0.3.14"
tui = { version = "0.19.0", features = ["crossterm", "serde"] }
lscolors = { version = "0.13.0", default-features = false, features = [] }
notify = "6.0.0"
