[package]
name = "treest"
version = "0.1.0"
edition = "2021"

[target."cfg(unix)".dependencies]
libc = "0.2.158"

[target."cfg(windows)".dependencies]
winapi = "0.3.9"

[dependencies]
lscolors = { version = "0.19.0", default-features = false, features = ["ansi_term"] }
serde_yml = "0.0.12"
sqlite = "0.36.1"
