[package]
name = "treest"
version = "0.1.0"
edition = "2021"

[target."cfg(unix)".dependencies]
libc = "0.2.158"

[target."cfg(windows)".dependencies]
winapi = "0.3.9"

[dependencies]
anyhow = "1.0.89"
lscolors = { version = "0.19.0", default-features = false, features = ["ansi_term"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
sqlite = "0.36.1"
thiserror = "1.0.64"
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
xml-rs = "0.8.22"
