[package]
name = "dash_conversion"
version = "0.1.0"
edition = "2021"
description = "Stringify identifier replacing '_'s with '-'s. proc-macro for `treest`."
license = "MIT"
repository = "https://github.com/naclsn/treest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
